# UAVLogViewer

./: .gitignore
backend/: README.md  logger.py  main.py  pyproject.toml  requirements.txt  run.sh
backend/process/: functions.py  process.py
config/: dev.env.js
src/: App.vue
src/components/: ChatComponent.vue  SideBarFileManager.vue
